12.9.1 (03-06-2025)
- Bug Fix: Dissociate the degree when deleting an academic tariff [#qubIT-Fenix-6753]

12.9.0 (30-05-2025)
- Improvement: Associate academic tariffs with units and more than one degree [#qubIT-Fenix-6753]
- Improvement: Create registration tuition debt by academic tariff [#qubIT-Fenix-6753]

12.8.0 (29-05-2025)
- Refactor: Implement missing treasury service method [#qubIT-Fenix-5465]
- Improvement: Customize and uniform the tuition installments and academic debts debit entry description format [#qubIT-Fenix-6941]

12.7.3 (03-03-2025)
- Bug Fix: When using the registration tuition service to calculate the original tuition amounts per installment, initialize the tuition allocation [#qubIT-Fenix-6662]
- Refactor: Unit tests for registration tuition serive, using tuition allocation [#qubIT-Fenix-6662]
- Bug Fix: When recalculation tuition installments, do not annul interest entries [#qubIT-Fenix-6662]

12.7.2 (21-02-2025)
- Bug Fix: In deleting a curricular course, dissociate all debit entries [#qubIT-Fenix-6657]

12.7.1 (20-02-2025)
- Refactor: Transfer relation between tuition products and degree types to this module [#qubIT-Fenix-6648]

12.7.0 (19-02-2025)
- Improvement: Configuration for prefix and suffix of recalculation of tuition installment debit entry description [#qubIT-Fenix-6649]

12.6.0 (19-02-2025)
- Refactor: Service method to find financial entity for unit [#qubIT-Fenix-6627]

12.5.0 (10-02-2025)
- Refactor: Remove usage of IAcademicTreasuryPlatformDependentServices [#qubIT-Fenix-6593]

12.4.0 (07-02-2025)
- Refactor: Move some IAcademicTreasuryPlatformDependentServices to AcademicTreasuryConstants [#qubIT-Fenix-6593]

12.3.2 (06-02-2025)
- Bug Fix: When creating academic treasury events for targets, get the FinantialEntity from the builder, instead of inferring with the degree [#qubIT-Fenix-6602]

12.3.1 (05-02-2025)