@@ -1,3 +1,5 @@
+- Bug Fix: Added the missing registration filter in finding custom academic treasury events [#qubIT-Fenix-7151]
+
 12.9.1 (03-06-2025)
 - Bug Fix: Dissociate the degree when deleting an academic tariff [#qubIT-Fenix-6753]
 
